--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     margin:0;
     position: relative;
     left: -40px;
-    /* background-image: url("Amazon_logo.png");
+    /* background-image: url("images.png");
     background-size: cover;  */
    
     overflow: hidden;
